logo combined not transparent

--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -16,7 +16,7 @@
                     <!-- Logo
                     ============================================= -->
                     <div id="logo">
-                        <a href="index.html" class="standard-logo" data-dark-logo="assets/images/logo_kitchener_massage.png"><img src="assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
+                        <a href="index.html" class="standard-logo" data-dark-logo="assets/images/kitchener_massage_logo_comb.png"><img src="assets/images/kitchener_massage_logo_comb.png" alt="Kitchener Massage Therapist"></a>
                     </div>
                     <!-- #logo end -->
 
@@ -59,15 +59,13 @@
 
         <section id="slider" class="slider-parallax swiper_wrapper full-screen clearfix inline-block" style="background: url('assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover;" data-height-lg="600" data-height-md="500" data-height-sm="400" data-height-xs="300" data-height-xxs="250">
 
-
-
-            <div id="travel-slider-overlay inline-block">
+            <div id=" inline-block" style="background: url('assets/images/bg_container_top.png') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover;">
 
                 <!-- Picture -->
                 <div class="vertical-middle hidden-sm hidden-xs hidden-xxs">
                     <div class="container clearfix">             
                         <div class="tabs travel-organiser-tabs fleft clearfix" >
-                            <img style="float: left;" src="assets/images/img_video.gif">
+                            <img style="float: left;" src="assets/images/img_video.png">
                         </div>
                         
 
@@ -78,7 +76,7 @@
                 <!-- Start Tabs -->
                 <div class="vertical-middle">
                     <div class="container clearfix">             
-                        
+
 
                         <div class="tabs travel-organiser-tabs clearfix">
 
@@ -170,6 +168,9 @@
                 <!-- Tabs Ends -->
                 
             </div>
+
+          </div>
+           
         </section>
 
         <!-- Content
@@ -177,22 +178,16 @@
         <section id="content" style="overflow: visible;">
 
 
-          <div class="content-wrap">
+        <div class="content-wrap notoppadding" >
 
-            <div class="promo  promo-full landing-promo header-stick center">
-              <div class="container clearfix">
-                <h3>KITCHENER / WATERLOO MASSAGE THERAPY</h3>
-                <span>Specializing in Deep Tissue Therapy!</span>
-              </div>
-          </div>
+             
 
           <div class="container clearfix">
 
-              <div class="clear bottommargin-lg"></div>
 
               <div id="section-features" class="heading-block title-center page-section">
-                <h2>Features Overview</h2>
-                <span>Some of the Features that are gonna blow your mind off</span>
+                <h2>Kitchener Massage Therapy</h2>
+                <span>Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</span>
             </div>
 
             <div class="col_one_third">
@@ -336,6 +331,9 @@
 
 </div>
 
+
+<!-- Testamonials -->
+
 <div class="section">
 
   <div class="container clearfix">
@@ -352,10 +350,10 @@
             <a href="#"><img src="images/testimonials/1.jpg" alt="Customer Testimonails"></a>
         </div>
         <div class="testi-content">
-            <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
+            <p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. Deep tissue massage treatment is nothing like a relaxing day at a spa, but it is precisely what I need... Read more</p>
             <div class="testi-meta">
-              John Doe
-              <span>XYZ Inc.</span>
+              Carrie
+              <span>Technical Writer</span>
           </div>
       </div>
   </div>
