--- a/_includes/page_head.html
+++ b/_includes/page_head.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/css/magnific-popup.css" type="text/css" />
 
     <link rel="stylesheet" href="/css/responsive.css" type="text/css" />
+    <link rel="stylesheet" href="/css/colors.css" type="text/css" />
 
     <link rel="stylesheet" href="/css/travel.css" type="text/css" />
 
