--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -5,7 +5,7 @@
 
         <!-- Header
         ============================================= -->
-        <header id="header" class="transparent-header" data-sticky-class="not-dark" data-responsive-class="not-dark">
+        <header id="header" class="transparent-header " data-sticky-class="not-dark" data-responsive-class="not-dark">
 
             <div id="header-wrap">
 
@@ -16,13 +16,13 @@
                     <!-- Logo
                     ============================================= -->
                     <div id="logo">
-                        <a href="index.html" class="standard-logo" data-dark-logo="assets/images/kitchener_massage_logo_comb.png"><img src="assets/images/kitchener_massage_logo_comb.png" alt="Kitchener Massage Therapist"></a>
+                        <a href="index.html" class="standard-logo" data-dark-logo="assets/images/logo_kitchener_massage.png"><img src="assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
                     </div>
                     <!-- #logo end -->
 
                     <!-- Primary Navigation
                     ============================================= -->
-                    <nav id="primary-menu" class="style-6">
+                    <nav id="primary-menu" class="style-6 style-5">
 
                         <ul class="one-page-menu" >
                             <li><a href="{{site.baseurl}}/"><div>Home</div></a></li>
@@ -81,9 +81,9 @@
                         <div class="tabs travel-organiser-tabs clearfix">
 
                             <ul class="tab-nav clearfix">
-                                <li><a href="#tab-hours"><i class="icon-building"></i><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Hours</span></a></li>
-                                <li><a href="#tab-rates"><i class="icon-plane"></i><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Rates</span></a></li>
-                                <li><a href="#tab-contact-form"><i class="icon-plane"></i><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Contact</span></a></li>
+                                <li><a href="#tab-hours"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Hours</span><i class="icon-table"></i></a></li>
+                                <li><a href="#tab-rates"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Rates</span><i class="icon-dollar"></i></a></li>
+                                <li><a href="#tab-contact-form"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Message</span><i class="icon-gmail"></i></a></li>
                             </ul>
 
                             <div class="tab-container">
@@ -182,116 +182,57 @@
 
              
 
-          <div class="container clearfix">
+            <div class="container clearfix">
 
+                <div class="section header-stick">
+                    <div class="container clearfix">
+                        <div class="row">
 
-              <div id="section-features" class="heading-block title-center page-section">
-                <h2>Kitchener Massage Therapy</h2>
-                <span>Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</span>
-            </div>
+                            <div class="col-md-9">
+                                <div class="heading-block bottommargin-sm">
+                                    <h3>Kitchener Massage Therapy</h3>
+                                </div>
 
-            <div class="col_one_third">
-                <div class="feature-box fbox-plain">
-                  <div class="fbox-icon" data-animate="bounceIn">
-                    <a href="#"><img src="images/icons/features/responsive.png" alt="Responsive Layout"></a>
+                                <p class="nobottommargin">Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</p>
+                            </div>
+
+                            <div class="col-md-3">
+                                <a href="#" class="button button-3d button-large btn-block center" style="margin-top: 30px;">Schedule Now</a>
+                            </div>
+
+                        </div>
+                    </div>
                 </div>
-                <h3>Responsive Layout</h3>
-                <p>Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
-            </div>
-        </div>
 
-        <div class="col_one_third">
-            <div class="feature-box fbox-plain">
-              <div class="fbox-icon" data-animate="bounceIn" data-delay="200">
-                <a href="#"><img src="images/icons/features/retina.png" alt="Retina Graphics"></a>
-            </div>
-            <h3>Retina Graphics</h3>
-            <p>Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Retina Icons, Fonts &amp; all others graphics are optimized.</p>
-        </div>
-    </div>
 
-    <div class="col_one_third col_last">
-        <div class="feature-box fbox-plain">
-          <div class="fbox-icon" data-animate="bounceIn" data-delay="400">
-            <a href="#"><img src="images/icons/features/performance.png" alt="Powerful Performance"></a>
-        </div>
-        <h3>Powerful Performance</h3>
-        <p>Canvas includes tons of optimized code that are completely customizable and deliver unmatched fast performance.</p>
-    </div>
-</div>
 
-<div class="clear"></div>
+                <div id="section-features" class="heading-block title-center page-section">
+                    <h2>Kitchener Massage Therapy</h2>
+                    <span>Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</span>
+                </div>
 
-<div class="col_one_third">
-    <div class="feature-box fbox-plain">
-      <div class="fbox-icon" data-animate="bounceIn" data-delay="600">
-        <a href="#"><img src="images/icons/features/flag.png" alt="Responsive Layout"></a>
-    </div>
-    <h3>Endless Possibilities</h3>
-    <p>You have complete easy control on each &amp; every element that provides endless customization possibilities.</p>
-</div>
-</div>
+                <div class="col_one_third">
+                    <div class="feature-box fbox-plain">
+                        <div class="fbox-icon" data-animate="bounceIn">
+                            <a href="#"><img src="images/icons/features/responsive.png" alt="Responsive Layout"></a>
+                        </div>
+                        <h3>Responsive Layout</h3>
+                        <p>Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
+                    </div>
+                </div>
 
-<div class="col_one_third">
-    <div class="feature-box fbox-plain">
-      <div class="fbox-icon" data-animate="bounceIn" data-delay="800">
-        <a href="#"><img src="images/icons/features/tick.png" alt="Retina Graphics"></a>
-    </div>
-    <h3>Light &amp; Dark Scheme</h3>
-    <p>Change your Website's Primary Scheme instantly by simply adding the dark class to the body.</p>
-</div>
-</div>
+                <div class="col_one_third">
+                    <div class="feature-box fbox-plain">
+                        <div class="fbox-icon" data-animate="bounceIn" data-delay="200">
+                            <a href="#"><img src="images/icons/features/retina.png" alt="Retina Graphics"></a>
+                        </div>
+                        <h3>Retina Graphics</h3>
+                        <p>Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Retina Icons, Fonts &amp; all others graphics are optimized.</p>
+                    </div>
+                </div>
 
-<div class="col_one_third col_last">
-    <div class="feature-box fbox-plain">
-      <div class="fbox-icon" data-animate="bounceIn" data-delay="1000">
-        <a href="#"><img src="images/icons/features/tools.png" alt="Powerful Performance"></a>
-    </div>
-    <h3>Customizable Fonts</h3>
-    <p>Use any Font you like from Google Web Fonts, Typekit or other Web Fonts. They will blend in perfectly.</p>
-</div>
-</div>
 
-<div class="clear"></div>
-
-<div class="col_one_third">
-    <div class="feature-box fbox-plain">
-      <div class="fbox-icon" data-animate="bounceIn" data-delay="1200">
-        <a href="#"><img src="images/icons/features/map.png" alt="Responsive Layout"></a>
-    </div>
-    <h3>Responsive Layout</h3>
-    <p>Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
-</div>
-</div>
-
-<div class="col_one_third">
-    <div class="feature-box fbox-plain">
-      <div class="fbox-icon" data-animate="bounceIn" data-delay="1400">
-        <a href="#"><img src="images/icons/features/seo.png" alt="Retina Graphics"></a>
-    </div>
-    <h3>Retina Graphics</h3>
-    <p>Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Retina Icons, Fonts &amp; all others graphics are optimized.</p>
-</div>
-</div>
-
-<div class="col_one_third col_last">
-    <div class="feature-box fbox-plain">
-      <div class="fbox-icon" data-animate="bounceIn" data-delay="1600">
-        <a href="#"><img src="images/icons/features/support.png" alt="Powerful Performance"></a>
-    </div>
-    <h3>Powerful Performance</h3>
-    <p>Canvas includes tons of optimized code that are completely customizable and deliver unmatched fast performance.</p>
-</div>
-</div>
-
-<div class="clear"></div>
-
-<div class="divider divider-short divider-center"><i class="icon-circle"></i></div>
-
-<div id="section-pricing" class="heading-block title-center nobottomborder page-section">
-    <h2>Pricing Details</h2>
-    <span>Our All inclusive Pricing Plan that covers you well</span>
-</div>
+            <div class="clear"></div>
 
 <div class="pricing-box pricing-extended bottommargin clearfix">
 
