--- a/_includes/page_head.html
+++ b/_includes/page_head.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/css/colors.css" type="text/css" />
 
     <link rel="stylesheet" href="/css/travel.css" type="text/css" />
+    <!-- <link rel="stylesheet" href="/css/old-style.css" type="text/css" /> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!--[if lt IE 9]>
