--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -196,10 +196,10 @@
                 <img style="border-radius: 0%;" src="assets/images/img_comatop.gif" alt="Customer Testimonails">
               </div>
               <div class="testi-content">
-                <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
+                <p>I walked out of my first treatment with Jeremy impressed that he did exactly what I wanted him to do. Deep tissue massage treatment is nothing like a relaxing day at a spa, but it is precisely what I need... <a title="Testimonials" href="{{site.baseurl}}/about/testimonials">Read more</a></p>
                 <div class="testi-meta">
-                  John Doe
-                  <span>XYZ Inc.</span>
+                  Carrie
+                  <span>Technical Writer</span>
                 </div>
               </div>
             </div>
@@ -211,10 +211,10 @@
                 <img style="border-radius: 0%;" src="assets/images/img_comatop.gif" alt="Customer Testimonails">
               </div>
               <div class="testi-content">
-                <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
+                <p>As a professional football player, taking care of my body is my number one priority and Jeremy has helped me to not only rehab from injuries but also keep me ready to perform at the highest level all season long.</p>
                 <div class="testi-meta">
-                  John Doe
-                  <span>XYZ Inc.</span>
+                  Andrew
+                  <span>Professional Football Player</span>
                 </div>
               </div>
             </div>
@@ -232,10 +232,10 @@
                 <img style="border-radius: 0%;" src="assets/images/img_comatop.gif" alt="Customer Testimonails">
               </div>
               <div class="testi-content">
-                <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
+                <p>I only have good things to say about KW Massage. Jeremy is very personable and easy to schedule appointments with. I used to get terrible tension headaches, but monthly appointments with Jeremy have made them all but disappear!</p>
                 <div class="testi-meta">
-                  John Doe
-                  <span>XYZ Inc.</span>
+                  SG
+                  <span>Kitchener</span>
                 </div>
               </div>
             </div>
@@ -247,10 +247,10 @@
                 <img style="border-radius: 0%;" src="assets/images/img_comatop.gif" alt="Customer Testimonails">
               </div>
               <div class="testi-content">
-                <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
+                <p>Getting deep tissue massage from Jeremy for the past 6 years has been an absolute life saver. Jeremy has been able to help me relieve many of my ailments and bodily pains. I competed in 2013 Jiu-Jitsu World... <a title="Testimonials" href="{{site.baseurl}}/about/testimonials">Read more</a></p>
                 <div class="testi-meta">
-                  John Doe
-                  <span>XYZ Inc.</span>
+                  KOB
+                  <span>Web Development/Home Renovations</span>
                 </div>
               </div>
             </div>
