--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -57,7 +57,7 @@
   <!-- #header end -->
 
   <!-- Header Slider With Picture and tabs -->
-  <section id="slider" class="slider-parallax swiper_wrapper full-screen clearfix inline-block" style="background: url('assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover;" data-height-lg="600" data-height-md="500" data-height-sm="400" data-height-xs="300" data-height-xxs="250">
+  <section id="slider" class="slider-parallax swiper_wrapper full-screen clearfix" style="background: url('assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover;" data-height-lg="600" data-height-md="500" data-height-sm="400" data-height-xs="300" data-height-xxs="250">
     <div id=" inline-block" >
 
       <!-- Picture -->
@@ -174,7 +174,7 @@
     <!-- KW Massage Specializing --> 
     <div class="content-wrap notoppadding" >
       <div class="container clearfix">
-        <div id="section-features" class="heading-block title-center page-section">
+        <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
           <h2>Kitchener Massage Therapy</h2>
           <span>Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</span>
         </div>
@@ -224,7 +224,7 @@
         <!-- Row 1 -->
 
         <!-- Row 2 -->
-        <div class="row">
+        <div class="row hidden-sm hidden-xs hidden-xxs">
 
           <div class="col-md-6 bottommargin">
             <div class="testimonial">
