components of homepage split, footer added,

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,14 @@
 <html dir="rtl" lang="en-US">
   {% include page_head.html %}
   <body class="stretched">
+  <!-- Document Wrapper
+    ============================================= -->
+    <div id="wrapper" class="clearfix">
 
       {% include page_header.html %}
+      {% include page_content.html %}
+      {% include page_footer.html %}
 
-
+    </div>
   </body>
 </html>
