home page done, picture and tab dissapearing with footer reload

--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -1,174 +1,51 @@
+<!-- Header
+============================================= -->
+<header id="header" class="transparent-header" data-sticky-class="not-dark" data-responsive-class="not-dark">
+  <div id="header-wrap ">
+    <div class="container clearfix">
 
+      <div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
 
-  <!-- Header
-  ============================================= -->
-  <header id="header" class="transparent-header" data-sticky-class="not-dark" data-responsive-class="not-dark">
+      <!-- Logo
+      ============================================= -->
+      <div id="logo">
+        <a href="index.html" class="standard-logo" data-dark-logo="assets/images/logo_kitchener_massage.png"><img src="assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
+      </div>
+      <!-- #logo end -->
 
-    <div id="header-wrap">
-
-      <div class="container clearfix">
-
-        <div id="primary-menu-trigger"><i class="icon-reorder"></i></div>
-
-          <!-- Logo
-          ============================================= -->
-          <div id="logo">
-            <a href="index.html" class="standard-logo" data-dark-logo="assets/images/logo_kitchener_massage.png"><img src="assets/images/logo_kitchener_massage.png" alt="Kitchener Massage Therapist"></a>
-          </div>
-          <!-- #logo end -->
-
-          <!-- Primary Navigation
-          ============================================= -->
-          <nav id="primary-menu" class="style-6 style-4">
-
-            <ul class="one-page-menu" >
-              <li><a href="{{site.baseurl}}/"><div>Home</div></a></li>
-              <li><a href="{{site.baseurl}}/about"><div>About</div></a>
-                <ul>
-                  <li><a href="{{site.baseurl}}/about/testimonials"><div>Testimonials</div></a></li>
-                  <li><a href="{{site.baseurl}}/about/rock-climbing-as-a-lifestyle"><div>Rock Climbing as a Lifestyle</div></a></li>
-                  <li><a href="{{site.baseurl}}/about/welcome"><div>Welcome</div></a></li>
-                </ul>
-              </li>
-              <li><a href="{{site.baseurl}}/clinic-information"><div>Appointments</div></a>
-                <ul>
-                  <li><a href="{{site.baseurl}}/clinic-information/note-to-new-massage-therapy-clients"><div>Note to New Massage Clients</div></a></li>
-                </ul>
-              </li>
-              <li><a href="{{site.baseurl}}/contact"><div>Contact</div></a></li>
-              <li><a href="{{site.baseurl}}/knowledge-centre"><div>Knowledge Centre</div></a>
-                <ul>
-                  <li><a href="{{site.baseurl}}/knowledge-centre/facts-about-registered-massage-therapy-in-ontario"><div>Facts</div></a></li>
-                  <li><a href="{{site.baseurl}}/knowledge-centre/general-massage-therapy"><div>General Massage Therapy</div></a></li>
-                  <li><a href="{{site.baseurl}}/knowledge-centre/stretching"><div>Stretching</div></a></li>
-                  <li><a href="{{site.baseurl}}/knowledge-centre/rock-climbing"><div>Rock Climbing</div></a></li>
-                </ul>
-              </li>
-            </ul>
-          </nav>
-              <!-- #primary-menu end -->
-        </div>
-      </div>  
-
-  </header>
-  <!-- #header end -->
-
-  <!-- Header Slider With Picture and tabs -->
-  <section id="slider" class="slider-parallax swiper_wrapper full-screen clearfix" style="background: url('assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover;" data-height-lg="600" data-height-md="500" data-height-sm="400" data-height-xs="300" data-height-xxs="250">
-    <div id=" inline-block" >
-
-      <!-- Picture -->
-      <div class="vertical-middle hidden-sm hidden-xs hidden-xxs">
-        <div class="container clearfix">             
-          <div class="tabs travel-organiser-tabs fleft clearfix" >
-            <img style="float: left;" src="assets/images/img_video.png">
-          </div>
-        </div>
-      </div>   
-      <!-- Picture -->
-
-      <!-- Start Tabs -->
-      <div class="vertical-middle">
-        <div class="container clearfix">             
-          <div class="tabs travel-organiser-tabs clearfix">
-          <!-- Tabs Nav-->
-            <ul class="tab-nav clearfix">
-              <li><a href="#tab-hours"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Hours</span><i class="icon-table"></i></a></li>
-              <li><a href="#tab-rates"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Rates</span><i class="icon-dollar"></i></a></li>
-              <li><a href="#tab-contact-form"><span class="hidden-md hidden-sm hidden-xs hidden-xxs">Message</span><i class="icon-gmail"></i></a></li>
-            </ul>
-            <!-- Tabs Nav -->
-            <!-- Tabs -->
-            <div class="tab-container">
-
-              <div class="tab-content clearfix" id="tab-hours">
-                <div class="heading-block nobottomborder bottommargin-sm clearfix">
-                  <h4 class="fright">Hours</h4>
-                  <div class="clear"></div>
-                </div>
-                <div id="timebox">
-                  <span><strong>Monday</strong>10:00 - 5:00</span>
-                  <span><strong>Tuesday</strong> 10:00 - 8:00</span>
-                  <span><strong>Wednesday</strong> 10:00 - 5:00</span>
-                  <span><strong>Thursday</strong> 10:00 - 3:00</span>
-                  <span><strong>Friday</strong> 10:00 - 3:00</span>
-                  <span><strong>Saturday</strong> Closed</span>
-                  <span><strong>Sunday</strong> Closed</span>
-                </div>
-              </div>
-              <div class="tab-content clearfix" id="tab-rates">
-                <div class="heading-block nobottomborder bottommargin-sm clearfix">
-                  <h4 class="fright">Rates</h4>
-                  <div class="clear"></div>
-                </div>
-
-                <div>
-                  <span><strong>1/2 Hour</strong> $60</span><br>
-                  <span><strong>1 Hour</strong> $90</span><br>
-                  <span><strong>1.5 Hour</strong> $125</span><br>
-                </div>
-              </div>
-              <div class="tab-content clearfix" id="tab-contact-form">
-                <div class="heading-block nobottomborder bottommargin-sm clearfix">
-                  <h4 class="fright">Contact Form</h4>
-                  <div class="clear"></div>
-                </div>
-                <form action="#" method="post" class="nobottommargin">
-                  <div class="row">
-                    <div class="col-sm-9 bottommargin-sm">
-                      <div class="row">
-                        <div class="col-sm-6 col-xs-6">
-                          <label for="">Name</label>
-                          <input type="text" value="" class="sm-form-control" placeholder="Eg. Melbourne, Australia">
-                        </div>
-                        <div class="col-sm-6 col-xs-6">
-                          <label for="">Email</label>
-                          <input type="email" value="" class="sm-form-control" placeholder="Eg. New York, United States">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-3 bottommargin-sm">
-                      <label for="">Subject</label>
-                      <input type="text" min="1" max="10" value="" class="sm-form-control" name="end" placeholder="2">
-                    </div>
-                    <div class="input-daterange travel-date-group col-sm-9 bottommargin-sm">
-                      <div class="row">
-                        <div class="col-sm-6 col-xs-6">
-                          <label for="">Message</label>
-                          <input type="text_area" value="" class="sm-form-control tright" name="start" placeholder="MM/DD/YYYY">
-                        </div>
-                        <div class="col-sm-6 col-xs-6">
-                          <label for="">Return</label>
-                          <input type="text" value="" class="sm-form-control tright" name="end" placeholder="MM/DD/YYYY">
-                        </div>
-                      </div>
-                    </div>
-                    <div class="col-sm-3  bottommargin-sm">
-                      <label for="">Rooms</label>
-                      <input type="number" min="1" max="10" value="" class="sm-form-control" name="end" placeholder="2">
-                    </div>
-                    <div class="col-sm-12">
-                      <button class="button button-3d nomargin rightmargin-sm">Submit</button>
-                      <a href="#" class="more-link fleft" style="margin-top: 9px;">Holiday Packages</a>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-            <!-- Tabs -->
-          </div>
-        </div>
-      </div>   
-      <!-- Tabs Ends -->
+      <!-- Nagigation -->
+      {% include nav.html %}
+      <!-- End Nagigation -->
 
     </div>
-  </section>
-  <!-- Header Slider With Picture and tabs -->
+  </div>  
+</header>
+<!-- #header end -->
 
-  
 
 
-<!-- Footer Scripts
-============================================= -->
-<script type="text/javascript" src="js/functions.js"></script>
+
+<!-- Header Slider With Picture and tabs -->
+<section id="slider" class="slider-parallax swiper_wrapper full-screen clearfix" style="background: url('assets/images/bg_body_mountain.jpg') center; backgroung-repeat: no-repeat; overflow: visible; background-size: cover;" data-height-lg="600" data-height-md="500" data-height-sm="400" data-height-xs="300" data-height-xxs="250">
+  <div id="inline-block" >
+
+    <!-- Picture -->
+    <div class="vertical-middle hidden-sm">
+      <div class="container clearfix">             
+          <img style="float: left;" src="assets/images/img_video.png">
+      </div>
+    </div>   
+    <!-- Picture -->
+
+    <!-- Start Tabs -->
+    <div dir="rtl" class="vertical-middle">
+      {% include tabs.html%}
+    </div>   
+    <!-- Tabs Ends -->
+
+  </div>
+</section>
+<!-- Header Slider With Picture and tabs -->
+
+
 
