--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -2,7 +2,7 @@
  ============================================= -->
  <section id="content" style="overflow: visible;">
 
-  <!-- KW Massage Specializing --> 
+   <!-- KW Massage Specializing --> 
   <div class="content-wrap notoppadding" >
     <div class="container clearfix">
       <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
@@ -14,13 +14,16 @@
     </div>
   </div>
   <!-- KW Massage Specializing -->
-  
+
+
+  <div class="row">
   <!-- Testimonials -->
   {% include home_page_testimonials.html %}
   <!-- End Testimonials -->
-  
+  </div>
+
+
   <!-- What is Deep Tissue... -->
- 
   <div class="content-wrap notoppadding" >
     <div class="container clearfix">
       <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
@@ -28,11 +31,11 @@
         <span>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.baseurl}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries.</span>
       </div>
       <div class="clear"></div>
-
     </div>
   </div>
+  <!-- End What is Deep Tissue... --> 
+
   <div class="clear"></div>  
-  <!-- End What is Deep Tissue... -->
 
 </section>
 <!-- #content end -->
