--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html dir="rtl" lang="en-US">
+<html lang="en-US">
   {% include page_head.html %}
   <body class="stretched">
   <!-- Document Wrapper
