footer diapering fixed~, working on tab

--- a/_includes/page_footer.html
+++ b/_includes/page_footer.html
@@ -1,16 +1,16 @@
 <!-- <footer id="footer" class="dark"> -->
-<footer id="footer" class="dark " style="background: url('images/footer-bg.jpg') repeat fixed; background-size: 100% 100%;">
+<footer id="footer" class="dark" style="background: url('images/footer-bg.jpg'); background-size: 100% 100%;">
 
-    <div class="container">
+    <div class="container clearfix">
 
         <!-- Footer Widgets
         ============================================= -->
-        <div class="footer-widgets-wrap clearfix">
+        <div class="footer-widgets-wrap">
 
             <!-- Contact Form -->
             <div class="col_one_third">
 
-               <div class="widget quick-contact-widget clearfix">
+               <div class="widget quick-contact-widget">
 
                     <h4>Send Message</h4>
 
@@ -76,12 +76,12 @@
 
 
         </div>
-        <!-- .footer-widgets-wrap end -->
+        <!-- Footer-widgets-wrap end -->
 
     </div>
     <!-- Copyrights
     ============================================= -->
-    <div id="copyrights">
+    <div id="copyrights" class="dark">
 
         <div class="container clearfix">
 
@@ -93,9 +93,6 @@
             </div>
 
         </div>
-
+    </div>
 <!-- #copyrights end -->
 </footer>
-<!-- Footer Scripts
-============================================= -->
-<script type="text/javascript" src="js/functions.js"></script>
