--- a/_includes/tabs.html
+++ b/_includes/tabs.html
@@ -14,7 +14,7 @@
 
       <div class="tab-content clearfix" id="tab-hours">
         <div class="heading-block nobottomborder bottommargin-sm clearfix">
-          <h4 class="fright">Hours</h4>
+          <h4 class="fleft">Hours</h4>
           <div class="clear"></div>
         </div>
         <div id="timebox">
@@ -29,11 +29,11 @@
       </div>
       <div class="tab-content clearfix" id="tab-rates">
         <div class="heading-block nobottomborder bottommargin-sm clearfix">
-          <h4 class="fright">Rates</h4>
+          <h4 class="fleft">Rates</h4>
           <div class="clear"></div>
         </div>
 
-        <div>
+        <div id="timebox">
           <span><strong>1/2 Hour</strong> $60</span><br>
           <span><strong>1 Hour</strong> $90</span><br>
           <span><strong>1.5 Hour</strong> $125</span><br>
