--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,5 +11,9 @@
       {% include page_footer.html %}
 
     </div>
+    <!-- Footer Scripts
+    ============================================= -->
+    <script type="text/javascript" src="js/functions.js"></script>
+
   </body>
 </html>
