tabs change with viewport

--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -30,7 +30,7 @@
   <div id="inline-block" >
 
     <!-- Picture -->
-    <div class="vertical-middle hidden-sm">
+    <div class="vertical-middle hidden-sm hidden-xs hidden-xxs">
       <div class="container clearfix">             
           <img style="float: left;" src="assets/images/img_video.png">
       </div>
