--- a/_includes/page_content.html
+++ b/_includes/page_content.html
@@ -2,18 +2,17 @@
  ============================================= -->
  <section id="content" style="overflow: visible;">
 
-   <!-- KW Massage Specializing --> 
+  <!-- What is Deep Tissue... -->
   <div class="content-wrap notoppadding" >
     <div class="container clearfix">
       <div id="section-features" class="heading-block title-center page-section nobottommargin topmargin toppadding">
-        <h1>Kitchener Massage Therapy</h1>
-        <span>Specializing in Deep Tissue Massage and Trigger Point Release Therapy to bring you the relief you need from repetitive strain injuries and postural dysfunctions related to sports, the workplace, and family life.</span>
+        <h1>What is Deep Tissue Massage</h1>
+        <span>Deep Tissue massage is similar to the most common type of massage, Swedish massage, in that your therapist uses long, smooth, and kneading strokes to achieve healing changes in the body. The two forms of massage differ in that <a title="Discomfort of deep tissue massage" href="{{site.baseurl}}/generalmassagetherapy/does-deep-tissue-massage-heart">Deep Tissue massage aims to affect the deeper structures of the body </a>and have a deeper level of healing. Deep Tissue massage is very effective in treating chronic muscle and connective tissue injuries.</span>
       </div>
       <div class="clear"></div>
-
     </div>
   </div>
-  <!-- KW Massage Specializing -->
+  <!-- End What is Deep Tissue... --> 
 
 
   <div class="row">
